# robe

./: .gitignore  Cargo.toml  README.md
.github/workflows/: coverage.yml
docs/: example_config.toml  spec.md
src/: dispatch.rs  domain.rs  errors.rs  help.rs  main.rs  registry.rs  settings.rs  utils.rs
src/dispatch/: add.rs  edit.rs  hashing.rs  io.rs  list.rs  register.rs  rm.rs  status.rs  usecmd.rs  view.rs
