[package]
name = "robe"
version = "0.0.8"
edition = "2024"
authors = ["Vicente Figueiredo <vicenteppfigueiredo@gmail.com>"]
description = "Wear your configs: a tiny CLI for saving and switching between dotfile configurations"
license = "Apache-2.0"
repository = "https://github.com/sawsent/robe"
homepage = "https://github.com/sawsent/robe"
documentation = "https://docs.rs/robe"
readme = "README.md"
keywords = ["dotfiles", "config", "profiles", "cli", "tool"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["target", "*.rs.bk", ".github"]

[dependencies]
dirs = "6.0.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

